Fix vmsize picker width overflowing (#1320)

--- a/src/@batch-flask/ui/form/form-page/form-page.scss
+++ b/src/@batch-flask/ui/form/form-page/form-page.scss
@@ -45,6 +45,7 @@
         > .section-content {
             flex: 1;
             padding: 0 5px;
+            min-width: 0;
         }
     }
 }
